# VisaVoice

./: .env.example  .gitignore  CLAUDE.md  README.md  learnings.md  pyproject.toml  short_term_memory.md  traceability.md
.github/workflows/: ci.yml
docs/plans/: 2026-04-19-visavoice-design.md  2026-04-19-visavoice-v0-implementation.md
src/visavoice/: config.py
src/visavoice/agent/: main.py  prompts.py  safety.py  safety_patterns.py  tools.py
src/visavoice/backend/: __main__.py  app.py  escalation.py  faq.py  hashing.py  identity.py  openai_embed.py  scheduler.py  store.py
src/visavoice/backend/data/: faqs.yaml  students.json
tests/: test_config.py
tests/agent/: test_prompts.py  test_safety_classifier.py  test_safety_regex.py  test_safety_shutdown.py  test_tool_contracts.py  test_tools.py
tests/backend/: test_app.py  test_escalation.py  test_faq.py  test_hashing.py  test_identity.py  test_scheduler.py  test_store.py
